# HaarCascadeCV

./: .project  CMakeLists.txt  HaarCascade  README.md  heads_cascade.xml  main.cpp
imageclipper/: imageclipper
imageclipper/video/: negative.txt  positive.txt
